<resources>
    <string name="app_name">Waiter App</string>
    <string name="action_settings">Settings</string>

    <string name="logoContentDescription">Splash Logo</string>
    <!-- Login Screen -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_signIn">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="EmailErrorMessage">Please enter email</string>
    <string name="PasswordErrorMessage">Please enter password</string>
    <string name="invalid_email">Please enter valid email address</string>
    <string name="missing_email">Email is missing</string>
    <string name="missing_password">Password is missing</string>
    <string name="invalid_email_password">Entered email or password are not in correct format</string>
    <string name="incorrect_email_password">Either email or password is incorrect</string>


    <!--  Register Screen String starts here  -->
    <string name="registerScreenTitle">Register</string>
    <string name="nameHint">Full Name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="register">Register</string>


    <!-- Network String Starts here -->
    <string name="network_service_message_title">Network Services</string>
    <string name="network_service_message">Network not available</string>

    <!-- ShowAlertDialog String Starts here -->
    <string name="Ok">OK</string>


    <!-- Application Error Message -->
    <string name="invalid_message">Oops! something went wrong. Please try again</string>
    <string name="no_data_received">Could not get any data from the web server</string>
    <string name="invalid_json_format">Invalid JSON format</string>
    <string name="unauthorized_access">Unauthorized Access</string>
    <string name="title_activity_waiter_dash_board">WaiterDashBoard</string>
    <string name="search">Search</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>


    {TWITTER_STRING_SETTINGS}


</resources>
