<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout 
        android:id="@+id/signupLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">
        
        <EditText 
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/nameHint"
            android:padding="10dp"/>
		
        <EditText 
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:padding="10dp"/>
        

        <EditText 
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:maxLength="10"/>
        
        <Button 
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="30dp"/>
            
        
    </LinearLayout>

</RelativeLayout>
