<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
          
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logoContentDescription"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_below="@+id/imageView1">
        
        

        <View style="@style/view_20" />
        
        

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/errorMessage"/>

        <View style="@style/view_20" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Uset Id"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:contentDescription="@string/email">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:contentDescription="@string/password">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="5.50"
                android:background="@color/colorPrimary"
                android:text="@string/btn_signIn"
                android:textColor="@android:color/white"
                android:contentDescription="@string/btn_signIn"/>

        </LinearLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone"
            android:contentDescription="@string/forgot_password"/>

        <View
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_signup"
                android:contentDescription="@string/btn_signup"/>
                
            

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

